<resources>
    <string name="app_name">Burger Kotlin</string>
    <string name="judul">Burger Station</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_management_user">Management User</string>
    <string name="menu_management_order">Order Management</string>
    <string name="menu_track">Track Pesanaaan</string>

</resources>