<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.burgerkotlin.ui.role.admin.main.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.burgerkotlin.ui.role.admin.main.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_management_user"
        android:name="com.example.burgerkotlin.ui.role.admin.main.user_management.UserManagementFragment"
        android:label="@string/menu_management_user"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/nav_order_management"
        android:name="com.example.burgerkotlin.ui.role.admin.main.order_management.OrderFragment"
        android:label="@string/menu_management_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_track"
        android:name="com.example.burgerkotlin.ui.role.admin.main.track.TrackFragment"
        android:label="@string/menu_track"
        tools:layout="@layout/fragment_track" />
</navigation>